Files: Fix name of hidden files and folders not showing in grid view #44

--- a/core/css/apps/official/_files.scss
+++ b/core/css/apps/official/_files.scss
@@ -1,3 +1,5 @@
+/* Files -------------------------------------------------------------------- */
+
 table td.filesize {
 	color: $foreground-inactive !important;
 }
@@ -55,4 +57,8 @@ tr {
 	&.searchresult {
 		background-color: $background-active-hover;
 	}
+}
+
+#filestable.view-grid:not(.hidden) tbody tr.hidden-file td.filename .name .nametext .extension {
+	display: inline-block;
 }
